--- a/.github/workflows/test-api.yml
+++ b/.github/workflows/test-api.yml
@@ -47,6 +47,7 @@ jobs:
         
     - name: Create test database
       run: |
+        ls /var/run/postgresql
         psql -c 'CREATE DATABASE simple-todo-app-test;'
         
     - name: Test Factory
