--- a/.github/workflows/test-api.yml
+++ b/.github/workflows/test-api.yml
@@ -33,22 +33,16 @@ jobs:
 #         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
 #         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
 #         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Setup PostgreSQL
-      uses: Harmon758/postgresql-action@v1.0.0
+
+    - name: Setup Postgres CLI
+        # You may pin to the exact commit or the version.
+        # uses: akanieski/setup-postgres-cli@eb287d6c98df0083ba52519eee85781563cd8828
+      uses: akanieski/setup-postgres-cli@v0.1.2
       with:
-        # Version of PostgreSQL to use
-        postgresql version: "12.12"
-        # POSTGRES_DB - name for the default database that is created
-        postgresql db: postgres
-        # POSTGRES_USER - create the specified user with superuser power
-        postgresql user: postgres
-        # POSTGRES_PASSWORD - superuser password
-        postgresql password: postgres
-        
-    - name: Create test database
-      run: |
-        ls /var/run/postgresql
-        psql -c 'CREATE DATABASE simple-todo-app-test;'
+        # Actions to take
+        commands: create database simple_todo_app;
+        # Password passed to postgres cli
+        password: postgres
         
     - name: Test Factory
       run: |
