--- a/.github/workflows/test-api.yml
+++ b/.github/workflows/test-api.yml
@@ -23,7 +23,7 @@ jobs:
         # `POSTGRES_HOST` is `postgres`
         env:
           # optional (defaults to `postgres`)
-          POSTGRES_DB: simple-todo-app-test
+          POSTGRES_DB: simple_todo_app_test
           # required
           POSTGRES_PASSWORD: postgres
           # optional (defaults to `5432`)
