--- a/.github/workflows/test-api.yml
+++ b/.github/workflows/test-api.yml
@@ -2,23 +2,25 @@ name: Test API
 
 on:
   push:
-    branches: [ "dev" ]
+    branches: ["dev"]
   pull_request:
-    branches: [ "master" ]
+    branches: ["master"]
 
 permissions:
   contents: read
 
+env:
+  DB_HOST: "postgres"
+
 jobs:
   test:
-
     runs-on: ubuntu-latest
-    
+
     services:
       postgres:
         # Docker Hub image
         image: postgres:latest
-        
+
         # service environment variables
         # `POSTGRES_HOST` is `postgres`
         env:
@@ -41,32 +43,27 @@ jobs:
           --health-retries 5
 
     steps:
-    - uses: actions/checkout@v3
-  
-    - name: Set up Python 3.8.10
-      uses: actions/setup-python@v3
-      with:
-        python-version: "3.8.10"
-    
-    - name: Install dependencies
-      run: |
-        cd api
-        python -m pip install --upgrade pip
-        pip install pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-        pip install -e .
+      - uses: actions/checkout@v3
 
-#     - name: Install PostgreSQL client
-#       run: |
-#           apt-get update
-#           apt-get install --yes postgresql-client
-        
-    - name: Test Factory
-      run: |
-        pytest -vv api/tests/test_factory.py
-    - name: Test Database
-      run: |
-        pytest -vv api/tests/test_db.py
-    - name: Test Users
-      run: |
-        pytest -vv api/tests/test_users.py
+      - name: Set up Python 3.8.10
+        uses: actions/setup-python@v3
+        with:
+          python-version: "3.8.10"
+
+      - name: Install dependencies
+        run: |
+          cd api
+          python -m pip install --upgrade pip
+          pip install pytest
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          pip install -e .
+
+      - name: Test Factory
+        run: |
+          pytest -vv api/tests/test_factory.py
+      - name: Test Database
+        run: |
+          pytest -vv api/tests/test_db.py
+      - name: Test Users
+        run: |
+          pytest -vv api/tests/test_users.py
